--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Your Name
-  avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
-  email: #emailaddress
+  name: Kristina Nelson
+  avatar: Kristina_Nelson_Headshot_v1.jpg
+  bio: "Kristina Nelson is a Portland-based researcher interested in human development and education."
+  email: #kristinanancynelson@gmail.com
   # Do not include the @ symbol in your Twitter username
   twitter: #username
   linkedin: #username
